# model-gridizer

./: .gitignore  line_plane_intersect.mw  model-gridizer.cabal  splitgrid.py  stack.yaml
shaders/: Common.lc  Main.lc  Phong.lc  Wireframe.lc
src/: Camera.hs  Core.hs  Loader.hs  Main.hs  Matrix.hs  Plane.hs  Splitter.hs  Triangulate.hs
