name:                model-gridizer
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/TeaspotStudio/model-gridizer#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable model-gridizer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Core
                       Matrix
                       Loader
                       Camera
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , deepseq >= 1.4.1.1
                     , exceptions >= 0.8.2.1
                     , GLFW-b >= 1.4.7.3
                     , gore-and-ash >= 1.1.0.1
                     , gore-and-ash-glfw >= 1.1.0.0
                     , gore-and-ash-lambdacube
                     , JuicyPixels >= 3.2.7
                     , lambdacube-compiler >= 0.4.0.0
                     , lambdacube-gl >= 0.4.0.2
                     , lambdacube-ir >= 0.2.0.0
                     , linear >= 1.20.4
                     , mtl >= 2.2.1
                     , text >= 1.2.2.0
                     , transformers >= 0.4.2.0
                     , vector >= 0.11.0.0
                     , wavefront >= 0.7
                     
  default-extensions: 
                      Arrows
                      BangPatterns
                      DataKinds
                      DeriveGeneric
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      OverloadedStrings
                      RecordWildCards
                      TypeFamilies
                      UndecidableInstances

  ghc-options: -threaded